coloquei o html semantico

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curriculo</title>
     
 </head>
 <body>
+
+  <header>
     <h1>
         Ana Julia Luiz Dos Santos
       </h1>
@@ -16,16 +18,22 @@
         width="190"
         height="200"
       />
-      <h3>
-        Contato
-      </h3>
-      <p>
-        Recife-50.920-198,Jardim São Paulo,número 61<br />
-        fone:98846-6282 <br />
-        Nascimento:07/05/2001<br />
-        Email:Anajulia.anaju7@gmail.com
+   </header>
+
+   <main>
+     
+     <div>
+      <h2>
+        Contatos
+      </h2>
+      <p>Recife-50.920-198,Jardim São Paulo</p>
+      <p>Nascimento:07/05/2001</p>
+      <p>Email:Anajulia.anaju7@gmail.com</p>
+      <p>Fone:(81)98846-6282</p>
       </p>
-  
+    </div>
+
+    <div>
       <h2>
         Perfil
       </h2>
@@ -35,13 +43,18 @@
         trabalhei informalmente como recepcionista e sei lidar bem com pessoas<br />
         Grande facilidade para aprender e me adptar a novos ambientes.
       </p>
-  
+    </div>
+
+    <div>
       <h2>
         Experiencias Proficionais
       </h2>
       <p>
         Em busca de uma oportunidade de emprego
       </p>
+    </div>
+
+    <div>
       <h2>
         Educação
       </h2>
@@ -50,6 +63,9 @@
         <li>Pacote office-intermediario</li>
         <li>Curso Frontend-em andamento</li>
       </ul>
+    </div>
+
+    <div>
       <h2>
         Atividades
       </h2>
@@ -57,6 +73,24 @@
         <li>Trabalho informal como recepcionista (09/2019-11/2019)</li>
         <li>Progeto voluntario Gentileza Gera Gentileza (08/2017-10/2017)</li>
       </ul>
+    </div>
+
+   </main>
+   <footer>
+
+  <div>
+    <h2>Mais informações</h2>
+  </div>
+
+  <div>
+  <ul>
+    <li><a href="https://github.com/Anaju7">Github</a></li>
+    <li><a href="https://www.linkedin.com/in/ana-julia-4838201ab/">Linkedin</a></li>
+  </ul>
+ </div>
+
+
+   </footer>
 
 </body>
 </html>
