troca das divs por section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
    <main>
      
-     <div>
+     <section>
       <h2>
         Contatos
       </h2>
@@ -31,9 +31,9 @@
       <p>Email:Anajulia.anaju7@gmail.com</p>
       <p>Fone:(81)98846-6282</p>
       </p>
-    </div>
+    </section>
 
-    <div>
+    <section>
       <h2>
         Perfil
       </h2>
@@ -43,18 +43,18 @@
         trabalhei informalmente como recepcionista e sei lidar bem com pessoas<br />
         Grande facilidade para aprender e me adptar a novos ambientes.
       </p>
-    </div>
+    </section>
 
-    <div>
+    <section>
       <h2>
         Experiencias Proficionais
       </h2>
       <p>
         Em busca de uma oportunidade de emprego
       </p>
-    </div>
+    </section>>
 
-    <div>
+    <section>
       <h2>
         Educação
       </h2>
@@ -63,9 +63,9 @@
         <li>Pacote office-intermediario</li>
         <li>Curso Frontend-em andamento</li>
       </ul>
-    </div>
+    </section>
 
-    <div>
+    <section>
       <h2>
         Atividades
       </h2>
@@ -73,21 +73,19 @@
         <li>Trabalho informal como recepcionista (09/2019-11/2019)</li>
         <li>Progeto voluntario Gentileza Gera Gentileza (08/2017-10/2017)</li>
       </ul>
-    </div>
+    </section>
 
    </main>
    <footer>
 
-  <div>
+  <section>
     <h2>Mais informações</h2>
-  </div>
 
-  <div>
   <ul>
     <li><a href="https://github.com/Anaju7">Github</a></li>
     <li><a href="https://www.linkedin.com/in/ana-julia-4838201ab/">Linkedin</a></li>
   </ul>
- </div>
+ </section>>
 
 
    </footer>
