--- a/index.html
+++ b/index.html
@@ -4,60 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculo</title>
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
 
+  <section class="container">
+
   <header>
     <h1>
-        Ana Julia Luiz Dos Santos
-      </h1>
-      <img
-        src="https://cdn.glitch.com/1170b673-7be2-4d47-b71e-b3b0c1894bd7%2FWhatsApp%20Image%202020-05-26%20at%2017.07.26.jpeg?v=1591749983524"
-        alt="imagem do curriculo"
-        width="190"
-        height="200"
-      />
-   </header>
+      Ana Julia Luiz Dos Santos
+    </h1>
+</header>
 
    <main>
      
-     <section>
-      <h2>
-        Contatos
-      </h2>
-      <p>Recife-50.920-198,Jardim São Paulo</p>
-      <p>Nascimento:07/05/2001</p>
-      <p>Email:Anajulia.anaju7@gmail.com</p>
-      <p>Fone:(81)98846-6282</p>
-      </p>
-    </section>
-
     <section>
       <h2>
         Perfil
       </h2>
-      <p>
+      <p class="Perfil">
         Ensino Médio concluído desde 2019, com curso técnico de Gestão
-        Administrativa em andamento, Curso frontend em andamento,<br />
-        trabalhei informalmente como recepcionista e sei lidar bem com pessoas<br />
+        Administrativa em andamento, Curso frontend em andamento,
+        trabalhei informalmente como recepcionista e sei lidar bem com pessoas
         Grande facilidade para aprender e me adptar a novos ambientes.
       </p>
+
     </section>
 
     <section>
       <h2>
         Experiencias Proficionais
       </h2>
+
       <p>
-        Em busca de uma oportunidade de emprego
+        Em busca de uma oportunidade de emprego          
       </p>
-    </section>>
+    </section>
 
     <section>
       <h2>
         Educação
       </h2>
+
       <ul>
         <li>Tenico em administração-2° periodo</li>
         <li>Pacote office-intermediario</li>
@@ -69,26 +58,39 @@
       <h2>
         Atividades
       </h2>
+
       <ul>
         <li>Trabalho informal como recepcionista (09/2019-11/2019)</li>
         <li>Progeto voluntario Gentileza Gera Gentileza (08/2017-10/2017)</li>
       </ul>
     </section>
 
-   </main>
-   <footer>
+  </main>
 
-  <section>
-    <h2>Mais informações</h2>
+    <footer>
 
-  <ul>
-    <li><a href="https://github.com/Anaju7">Github</a></li>
-    <li><a href="https://www.linkedin.com/in/ana-julia-4838201ab/">Linkedin</a></li>
-  </ul>
- </section>>
+      <h2>Mais informações</h2>
+      <div>
+         <ul class="list-midias">
+            <li><a href="https://github.com/Anaju7" target="_blank"><img class="midias" src="./img/github.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/ana-julia-4838201ab/" target="_blank"><img class="midias" src="./linkedin.png"></a></li>
+         </ul>
+     </div>
+     </footer>
 
+    </section>
 
-   </footer>
-
+    <aside>
+      <h2>
+        Contatos
+      </h2>
+  
+      <p>Recife-50.920-198,Jardim São Paulo</p>
+      <p>Nascimento:07/05/2001</p>
+      <p>Email:Anajulia.anaju7@gmail.com</p>
+      <p>Fone:(81)98846-6282</p>
+      </p>
+    </aside>
+   
 </body>
 </html>
