--- a/index.html
+++ b/index.html
@@ -1,96 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculo</title>
-    <link rel="stylesheet" href="style.css">
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Curriculo</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Belgrano&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
 
   <section class="container">
 
-  <header>
-    <h1>
-      Ana Julia Luiz Dos Santos
-    </h1>
-</header>
+    <header>
+      <h1>
+        Ana Julia Luiz Dos Santos
+      </h1>
 
-   <main>
-     
-    <section>
-      <h2>
-        Perfil
-      </h2>
-      <p class="Perfil">
-        Ensino Médio concluído desde 2019, com curso técnico de Gestão
-        Administrativa em andamento, Curso frontend em andamento,
-        trabalhei informalmente como recepcionista e sei lidar bem com pessoas
-        Grande facilidade para aprender e me adptar a novos ambientes.
-      </p>
+      <div>
+        <h2>
+          Dados Pessoais
+        </h2>
 
-    </section>
+        <p>Recife,Jardim São Paulo n°61</p>
+        <p>Email:Anajulia.anaju7@gmail.com</p>
+        <p>Fone:(81)98846-6282</p>
+        </p>
+      </div>
+    </header>
 
-    <section>
-      <h2>
-        Experiencias Proficionais
-      </h2>
+    <main>
 
-      <p>
-        Em busca de uma oportunidade de emprego          
-      </p>
-    </section>
+      <div>
+        <h2>
+          Perfil
+        </h2>
+        <p class="Perfil">
+          Meu nome é Ana Julia,
+          sou extremamente curiosa e gosto de sempre estar aprendendo coisas novas, sou muito flexível e consigo me
+          adaptar rapidamente a novos lugares 
+        </p>
 
-    <section>
-      <h2>
-        Educação
-      </h2>
+      </div>
 
-      <ul>
-        <li>Tenico em administração-2° periodo</li>
-        <li>Pacote office-intermediario</li>
-        <li>Curso Frontend-em andamento</li>
-      </ul>
-    </section>
+      <div>
+        <h2>
+          Objetivos
+        </h2>
 
-    <section>
-      <h2>
-        Atividades
-      </h2>
+        <p>
+          Atuar como Desenvolvedor Web, desenvolver e aprimorar meus conhecimentos nesta area.
+        </p>
+      </div>
 
-      <ul>
-        <li>Trabalho informal como recepcionista (09/2019-11/2019)</li>
-        <li>Progeto voluntario Gentileza Gera Gentileza (08/2017-10/2017)</li>
-      </ul>
-    </section>
+      <div>
+        <h2>
+          Qualificações
+        </h2>
 
-  </main>
+        <h4>Front-End Developer - Start Latam</h4>
 
-    <footer>
+        <ul>
+          <li>Módulo 1 - Inteligência Emocional</li>
+          <li>Módulo 2 - Lógica e Banco de dados</li>
+          <li>Módulo 3 - Específica 172hrs</li>
+        </ul>
+      </div>
+
+      <section class="habilidades">
+
+        <h2>
+          Conhecimentos
+        </h2>
+
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React.js</li>
+        </ul>
+
+        <h2>
+          Pontos Fortes
+        </h2>
+
+        <ul>
+          <li>Proativa</li>
+          <li>Resiliência</li>
+          <li>Boa Comunicação</li>
+          <li>Flexibilidade</li>
+          <li>Planejadora</li>
+        </ul>
+      </section>
+
+    </main>
+
+    <footer class="rodapé">
 
       <h2>Mais informações</h2>
       <div>
-         <ul class="list-midias">
-            <li><a href="https://github.com/Anaju7" target="_blank"><img class="midias" src="./img/github.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/ana-julia-4838201ab/" target="_blank"><img class="midias" src="./linkedin.png"></a></li>
-         </ul>
-     </div>
-     </footer>
+        <ul class="rede-social">
+          <li><a href="https://github.com/Anaju7" target="_blank"><img class="midias" src="./img/github.png"></a></li>
 
-    </section>
+          <li><a href="https://www.linkedin.com/in/ana-julia-4838201ab/" target="_blank"><img class="midias"
+                src="./img/linkedin.png" /></a></li>
+        </ul>
+      </div>
+    </footer>
 
-    <aside>
-      <h2>
-        Contatos
-      </h2>
-  
-      <p>Recife-50.920-198,Jardim São Paulo</p>
-      <p>Nascimento:07/05/2001</p>
-      <p>Email:Anajulia.anaju7@gmail.com</p>
-      <p>Fone:(81)98846-6282</p>
-      </p>
-    </aside>
-   
+  </section>
 </body>
+
 </html>
